test/corpus/scripts.txt
==================
Every script directive
==================

/var/log/application.log {
  firstaction
    echo first
  endscript
  prerotate
    if test -f /run/app.pid; then
      echo before
    fi
  endscript
  postrotate
    systemctl reload application
  endscript
  lastaction
    echo last
  endscript
  preremove
    rm -f -- "$1.metadata"
  endscript
}

---

(source_file
  (rotation_block
    (path_list
      (path_pattern))
    (script_block
      (script_directive)
      (script_body)
      (endscript))
    (script_block
      (script_directive)
      (script_body)
      (endscript))
    (script_block
      (script_directive)
      (script_body)
      (endscript))
    (script_block
      (script_directive)
      (script_body)
      (endscript))
    (script_block
      (script_directive)
      (script_body)
      (endscript))))

==================
Empty body and terminator lookalikes
==================

/var/log/application.log {
  firstaction
  endscript
  postrotate
    echo endscript
    "endscript"
    endscript_helper
    printf '%s' endscript
  endscript
}

---

(source_file
  (rotation_block
    (path_list
      (path_pattern))
    (script_block
      (script_directive)
      (endscript))
    (script_block
      (script_directive)
      (script_body)
      (endscript))))
