test/corpus/whitespace.txt
==================
Tabs and blank lines
==================

	# tab-indented comment

/var/log/application.log	{
	daily
	rotate	4
}

---

(source_file
  (comment)
  (rotation_block
    (path_list
      (path_pattern))
    (directive
      (directive_name))
    (directive
      (directive_name)
      (directive_arguments
        (argument
          (integer))))))
